Change body's background

--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@ Main Content section
 -->
 
 
-	<main id="#pagemain">
+	<main id="pagemain">
 
 		<section>
             <div class="container" >
@@ -103,15 +103,15 @@ Main Content section
                     <div class="col-12 col-sm-6 col-md-4 order-md-2" id="skills">
                         <h1>Skills</h1>
                         <ul>
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
-                            <li>Bootstrap</li>
-                            <li>jQuery</li>
-                            <li>UI/UX</li>
-                            <li>AJAX</li>
-                            <li>RESTful API</li>
-                            <li>JSON</li>
+                            <li><img src="images\logos\html550x50.png">HTML5</li>
+                            <li><img src="images\logos\css350x50.png">CSS3</li>
+                            <li><img src="images\logos\javascript50x50.png">JavaScript</li>
+                            <li><img src="images\logos\bootstrap450x50.jpg">Bootstrap</li>
+                            <li><img src="images\logos\jquery50x50.jpg">jQuery</li>
+                            <li><img src="images\logos\uiux50x50.png">UI/UX</li>
+                            <li><img src="images\logos\ajax50x50.jpg">AJAX</li>
+                            <li><img src="images\logos\restful50x50.png">RESTful API</li>
+                            <li><img src="images\logos\json50x50.png">JSON</li>
                         </ul>
                     </div>
                 </div>
