Inserted sample project into portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,10 +72,10 @@ Main Content section
                         <div class="card">
                             <img class="card-img-top" src="images/project1.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Donovan Lo's Profile</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">User Centric Front End Development with HTML & CSS</h6>
+                                <p class="card-text">A personal resume website using HTML5 and CSS3.</p>
+                                <a href="http://www.donovanlo.sg/" class="btn btn-primary">Go website</a>
                             </div>
                         </div>
                     </div>
@@ -84,10 +84,10 @@ Main Content section
                         <div class="card">
                             <img class="card-img-top" src="images/sample2.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Holiday Planner</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Interactive Front End Development with Javascript</h6>
+                                <p class="card-text">Helps to locate nearby accomodation, food and tourist attractions in a selected location.</p>
+                                <a href="https://benhasselgren.github.io/ifd-milestone-project-pages/#" class="btn btn-primary">Go website</a>
                             </div>
                         </div>
                     </div>
@@ -96,10 +96,10 @@ Main Content section
                         <div class="card">
                             <img class="card-img-top" src="images/sample3.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Memorize Me</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Data Centric Development with Python</h6>
+                                <p class="card-text">Welcome to the Memory Game. This is a free to play game with a 4x4 and 6x6 board. This Game is build as a project for my Full Stack Web Development training.</p>
+                                <a href="https://memorize-me-game.herokuapp.com/" class="btn btn-primary">Go website</a>
                             </div>
                         </div>
                     </div>
@@ -108,10 +108,10 @@ Main Content section
                         <div class="card">
                             <img class="card-img-top" src="images/sample4.png" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                                <h5 class="card-title">Unitracker</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Full Stack Frameworks with Django</h6>
+                                <p class="card-text">Unitracker is a web app to allow users to report bugs, request features and view the details of each ticket.</p>
+                                <a href="https://unitracker.herokuapp.com/" class="btn btn-primary">Go website</a>
                             </div>
                         </div>
                     </div>
