Added disclaimer for portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,9 @@ Main Content section
 					</div>
 				</div>
 			</div>
+            <div>
+                Note： Please note that with the exception of first project, the remaining three are projects from Code Institute's Student Project Page (https://codeinstitute.net/student-projects/)
+            </div>
 		</div>
 	</main>
 <!--
@@ -178,6 +181,7 @@ Footer section
 						</div>
 					</div>
 				</div>
+
 			</section>
 		</div>
 <!-- Site Map Navigation -->
