--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	</script>
 	<script src="https://use.fontawesome.com/e62e6f1eeb.js">
 	</script>
+    <script src="javascripts/smtp.js"></script>  
+    <script src="javascripts/emailme.js"></script>  
 	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -252,7 +254,7 @@ Footer section
 									</div>
 									<div class="form-group row text-center">
 										<div class="col-12">
-											<button class="btn btn-primary" id="submitform" type="submit">Send</button>
+											<input type="button" value="Send Email" onclick="sendEmail()"/>Send</button>
 										</div>
 									</div>
 								</form>
