--- a/test.html
+++ b/test.html
@@ -7,10 +7,18 @@
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
 	<title>Donovan's Home Page</title><!-- CSS Reset -->
-	<link href="css/reset.css" rel="stylesheet"><!-- Latest compiled and minified CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"><!-- CSS -->
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"><!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet"><!-- Font Awesome 4-->
+
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
+	</script>
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+	</script>
+	<script src="https://use.fontawesome.com/e62e6f1eeb.js">
+	</script>
+    <script src="javascripts/smtp.js"></script>  
+    <script src="javascripts/emailme.js"></script>  
 	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -20,46 +28,228 @@
 Header section
 
 =========================================================================
--->   <header id="pageheader">
-    <a id="top"></a>
-        <div class="container">
-        <!-- Navbar component -->
-            <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <!-- Brand -->
-                <a class="navbar-brand" href="index.html"><img src="images/donovanlogo150x131.png" class="d-none d-xl-block"><img src="images/donovanlogo150x131.png" class="d-block d-xl-none"></a>
-                <!-- Toggler/collapsibe Button -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- Navbar links -->
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="resume.html">Resume</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
+-->
+	<header id="pageheader">
+		<a id="top"></a> <!-- Navbar component -->
+		<nav class="navbar navbar-expand-md navbar-dark xs-dark">
+			<div class="container">
+				<!-- logo -->
+				<a class="navbar-brand img-fluid" href="index.html"><img class="d-none d-xl-block" src="images/donovanlogo150x131.png"><img class="d-block d-xl-none" src="images/donovanlogo200x70.png"></a> <!-- Hamburger -->
+				 <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button> <!-- Main Navigation -->
+				<div class="navbarlink collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="nav-item active">
+							<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="resume.html">Resume</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="portfolio.html">Portfolio</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+<!--
+=========================================================================
 
-                    </ul>
+Main Content section
 
-
+=========================================================================
+-->
+<main>
+<h1>Contact Form</h1>
+    <div class="container">
+        <form method="post">
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label text-right" for="sendername">Name</label>
+                <div class="col-sm-10">
+                    <input class="form-control" id="sendername" placeholder="Enter Name" type="text">
                 </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label text-right" for="senderemail">Email</label>
+                <div class="col-sm-10">
+                    <input class="form-control" id="senderemail" placeholder="Enter Email" type="email"> <small class="form-text text-muted" id="emailHelp">We'll never share your email with anyone else.</small>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label text-right" for="bodyHtml">Message</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" id="bodyHtml" rows="3"></textarea>
+                </div>
+            </div>
+            <div class="form-group row text-center">
+                <div class="col-12">
+                    <input type="button" value="Send Email" onclick="sendEmail()"/>Send</button>
+                </div>
+            </div>
+        </form>
+    </div>
 
 
-            </nav>
+</main>
 
-        </div>
 
-    </header>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-	</script> <!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
-	</script> <!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
+<!--
+=========================================================================
+Footer section
+=========================================================================
+-->
+	<footer id="pagefooter">
+<!-- Pagination component -->
+		<nav aria-label="Page navigation" id="pagenavigation">
+			<ul class="pagination pagination-circle pg-blue pagination-md justify-content-center">
+				<li class="page-item disabled">
+					<a aria-label="Previous" class="page-link" tabindex="-1"><span aria-hidden="true"><i aria-hidden="true" class="fa fa-chevron-circle-left"></i></span> <span class="sr-only">Previous</span> <!-- `@@ to edit accordingly for different page --></a>
+				</li>
+				<li class="page-item active">
+					<a class="page-link">1 <span class="sr-only">(current)</span></a>
+				</li><!-- @@@ to edit accordingly for different page -->
+				<li class="page-item">
+					<a class="page-link" href="resume.html#top">2</a>
+				</li>
+				<li class="page-item">
+					<a class="page-link" href="portfolio.html#top">3</a>
+				</li>
+				<li class="page-item">
+					<a aria-label="Next" class="page-link" href="resume.html#top"><span aria-hidden="true"><i aria-hidden="true" class="fa fa-chevron-circle-right"></i></span> <span class="sr-only">Next</span></a>
+				</li>
+			</ul>
+		</nav>
+<!-- Contact Me section -->
+		<div class="container-fluid" id="pagefootermiddle">
+			<section>
+				<div class="container">
+					<div class="row justify-content-center">
+						<div class="col-12 col-lg-6 align-items-stretch">
+							<h1>Contact Information</h1>
+							<p class="contactitem"><i aria-hidden="true" class="fa fa-phone-square"></i><span class="sr-only">Mobile</span> (65) 9683 6694</p>
+							<p class="contactitem"><i aria-hidden="true" class="fa fa-envelope"></i><span class="sr-only">Email</span> <a href="mailto:donovan.lo@mensa.org.sg">donovan.lo@mensa.org.sg</a></p>
+							<p class="contactitem"><i aria-hidden="true" class="fa fa-linkedin"></i><span class="sr-only">LinkedIn</span> <a href="https://linkedin.donovan.sg">https://linkedin.donovan.sg</a></p>
+							<p class="contactitem"><i aria-hidden="true" class="fa fa-user-circle-o"></i><span class="sr-only">Profile</span> <a href="https://www.donovanlo.sg">https://www.donovanlo.sg</a></p>
+						</div>
+						<div class="col-12 col-lg-6">
+							<h1>Contact Form</h1>
+							<div class="container">
+								<form action="https://api.elasticemail.com/v2/email/send" method="post">
+									<input name="apikey" type="hidden" value="9AE2E1240D851D95446D75806C226044C407CED61B4F57700A95BAEFFF23F0A5FC2FFC32BC68782501954769A24DA65F"> <input name="subject" type="hidden" value="From online form at www.donovanlo.sg"> <input name="to" type="hidden" value="donovan.lo@mensa.org.sg"> <input name="from" type="hidden" value="donovanlo1174@gmail.com">
+									<div class="form-group row">
+										<label class="col-sm-2 col-form-label text-right" for="sendername">Name</label>
+										<div class="col-sm-10">
+											<input class="form-control" id="sendername" placeholder="Enter Name" type="text">
+										</div>
+									</div>
+									<div class="form-group row">
+										<label class="col-sm-2 col-form-label text-right" for="senderemail">Email</label>
+										<div class="col-sm-10">
+											<input class="form-control" id="senderemail" placeholder="Enter Email" type="email"> <small class="form-text text-muted" id="emailHelp">We'll never share your email with anyone else.</small>
+										</div>
+									</div>
+									<div class="form-group row">
+										<label class="col-sm-2 col-form-label text-right" for="bodyHtml">Message</label>
+										<div class="col-sm-10">
+											<textarea class="form-control" id="bodyHtml" rows="3"></textarea>
+										</div>
+									</div>
+									<div class="form-group row text-center">
+										<div class="col-12">
+											<input type="button" value="Send Email" onclick="sendEmail()"/>Send</button>
+										</div>
+									</div>
+								</form>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
+<!-- Site Map Navigation -->
+		<nav aria-label="Site Map navigation" id="pagefooterbottom">
+			<div class="container-fluid" id="footer-sitemap">
+				<section class="container">
+					<ul class="row">
+						<li class="col-12 col-sm-6 col-md-4">
+							<a class="sitemap-header" href="index.html#top">Home</a>
+							<ul class="footer-sitemap-li">
+								<li>
+									<a href="index.html#bio">Bio</a>
+								</li>
+								<li>
+									<a href="index.html#value-proposition">Value Proposition</a>
+								</li>
+								<li>
+									<a href="index.html#motivator">Motivator</a>
+								</li>
+								<li>
+									<a href="index.html#interest">Interest</a>
+								</li>
+								<li>
+									<a href="index.html#testimonials">Testimonials</a>
+								</li>
+								<li>
+									<a href="index.html#membership">Membership</a>
+								</li>
+								<li>
+									<a href="index.html#personality-test">Personality Test Result</a>
+								</li>
+							</ul>
+						</li>
+						<li class=" col-12 col-sm-6 col-md-4">
+							<a class="sitemap-header" href="resume.html#top">Resume</a>
+							<ul class="footer-sitemap-li">
+								<li>
+									<a href="resume.html#objective">Objective</a>
+								</li>
+								<li>
+									<a href="resume.html#relevant-summary">Relevant Skills</a>
+								</li>
+								<li>
+									<a href="resume.html#past-working-experience">Past Working Experience</a>
+								</li>
+								<li>
+									<a href="resume.html#education">Education</a>
+								</li>
+								<li>
+									<a href="resume.html#skills">Skills</a>
+								</li>
+								<li>
+									<a href="resume.html#certificates">Certificates</a>
+								</li>
+								<li>
+									<a href="resume.html#volunteering-experience">Volunteering Experience</a>
+								</li>
+							</ul>
+						</li>
+						<li class=" col-12 col-sm-6 col-md-4">
+							<a class="sitemap-header" href="portfolio.html#top">Portfolio</a>
+							<ul class=" footer-sitemap-li">
+								<li>
+									<a href="portfolio.html#project-1">Project #1</a>
+								</li>
+								<li>
+									<a href="portfolio.html#project-2">Project #2</a>
+								</li>
+								<li>
+									<a href="portfolio.html#project-3">Project #3</a>
+								</li>
+								<li>
+									<a href="portfolio.html#project-4">Project #4</a>
+								</li>
+							</ul><br>
+							<br>
+							<a class="sitemap-header download-resume" href="documents/DonovanResume.pdf" target="_blank">Download Resume</a>
+						</li>
+					</ul>
+				</section>
+			</div>
+		</nav>
+	</footer>
+	<script src="https://smtpjs.com/v3/smtp.js">
+	</script> 
+	<script>
 	</script>
 </body>
-</html> 
+</html>
