--- a/test.html
+++ b/test.html
@@ -17,42 +17,17 @@
 	</script>
 	<script src="https://use.fontawesome.com/e62e6f1eeb.js">
 	</script>
-    <script src="javascripts/smtp.js"></script>  
-    <script src="javascripts/emailme.js"></script>  
 	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 
 <main>
 <h1>Contact Form</h1>
-    <div class="container">
-        <form method="post">
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label text-right" for="sendername">Name</label>
-                <div class="col-sm-10">
-                    <input class="form-control" id="sendername" placeholder="Enter Name" type="text">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label text-right" for="senderemail">Email</label>
-                <div class="col-sm-10">
-                    <input class="form-control" id="senderemail" placeholder="Enter Email" type="email"> <small class="form-text text-muted" id="emailHelp">We'll never share your email with anyone else.</small>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="col-sm-2 col-form-label text-right" for="bodyHtml">Message</label>
-                <div class="col-sm-10">
-                    <textarea class="form-control" id="bodyHtml" rows="3"></textarea>
-                </div>
-            </div>
-            <div class="form-group row text-center">
-                <div class="col-12">
-                    <input type="button" value="Send Email" onclick="sendEmail()"/>Send</button>
-                </div>
-            </div>
-        </form>
-    </div>
 
+<div class="embed-responsive embed-responsive-21by9">
+  <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfeHE1A2HFQomHXdez_VXssOyp7Ik8TbNJGua5fnogaXpq8og/viewform?usp=pp_url"></iframe>
+</div>
+    
 
 </main>
 
