Add Objectives to Resume Page

--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@ Main Content section
 					<div class="col-12" id="objective">
 <!-- Objectives -->
 						<h1>Objectives</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rutrum odio. Maecenas aliquam odio eget magna finibus, a luctus lacus hendrerit. Aenean ut mi id risus tristique imperdiet a sagittis nisl. Aliquam accumsan felis faucibus, interdum nisl ut, accumsan ante. Fusce auctor pellentesque lectus, sed tristique leo ullamcorper pretium. Nullam quis nisi massa. Nulla porta nulla nec finibus tincidunt. Aliquam vel laoreet sapien, et facilisis lacus. Nunc tincidunt nec dui sit amet varius. Curabitur vulputate ipsum at enim ultrices pharetra. Phasellus nec metus in dui tincidunt gravida ut tincidunt dolor. Aenean quis vulputate orci. Curabitur sit amet turpis tortor. Etiam augue nisi, egestas eget elementum vel, ultrices ac velit. Sed quam lectus, ultricies vel facilisis id, porta non risus.</p>
+						<p>Desire a web developer position, bringing cross sector experience and skillsets into the development of programs that can help contribute to customers' business goals.</p>
 					</div>
 				</div>
 				<div class="row">
