Edit Contact Me section in all pages

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@ Footer section
 		<div class="container-fluid" id="pagefootermiddle">
 			<section>
 				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-12 col-lg-6 align-items-stretch">
+					<div class="row justify-content-center ">
+						<div class="col-12 col-lg-6 align-items-stretch" >
 							<h1>Contact Information</h1>
 							<p class="contactitem"><i aria-hidden="true" class="fa fa-phone-square"></i><span class="sr-only">Mobile</span> (65) 9683 6694</p>
 							<p class="contactitem"><i aria-hidden="true" class="fa fa-envelope"></i><span class="sr-only">Email</span> <a href="mailto:donovan.lo@mensa.org.sg">donovan.lo@mensa.org.sg</a></p>
@@ -229,7 +229,7 @@ Footer section
 						</div>
 						<div class="col-12 col-lg-6">
 							<h1>Contact Form</h1>
-                            <div class="embed-responsive embed-responsive-21by9">
+                            <div class="embed-responsive embed-responsive-21by9" style="height: 75%">
                             <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfeHE1A2HFQomHXdez_VXssOyp7Ik8TbNJGua5fnogaXpq8og/viewform?usp=pp_url"></iframe>
                             </div>
 						</div>
