--- a/resume.html
+++ b/resume.html
@@ -174,8 +174,8 @@ Footer section
 		<div class="container-fluid" id="pagefootermiddle">
 			<section>
 				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-12 col-lg-6 align-items-stretch">
+					<div class="row justify-content-center ">
+						<div class="col-12 col-lg-6 align-items-stretch" >
 							<h1>Contact Information</h1>
 							<p class="contactitem"><i aria-hidden="true" class="fa fa-phone-square"></i><span class="sr-only">Mobile</span> (65) 9683 6694</p>
 							<p class="contactitem"><i aria-hidden="true" class="fa fa-envelope"></i><span class="sr-only">Email</span> <a href="mailto:donovan.lo@mensa.org.sg">donovan.lo@mensa.org.sg</a></p>
@@ -184,34 +184,9 @@ Footer section
 						</div>
 						<div class="col-12 col-lg-6">
 							<h1>Contact Form</h1>
-							<div class="container">
-								<form action="https://api.elasticemail.com/v2/email/send" method="post">
-									<input name="apikey" type="hidden" value="9AE2E1240D851D95446D75806C226044C407CED61B4F57700A95BAEFFF23F0A5FC2FFC32BC68782501954769A24DA65F"> <input name="subject" type="hidden" value="From online form at www.donovanlo.sg"> <input name="to" type="hidden" value="donovan.lo@mensa.org.sg"> <input name="from" type="hidden" value="donovanlo1174@gmail.com">
-									<div class="form-group row">
-										<label class="col-sm-2 col-form-label text-right" for="sendername">Name</label>
-										<div class="col-sm-10">
-											<input class="form-control" id="sendername" placeholder="Enter Name" type="text">
-										</div>
-									</div>
-									<div class="form-group row">
-										<label class="col-sm-2 col-form-label text-right" for="senderemail">Email</label>
-										<div class="col-sm-10">
-											<input class="form-control" id="senderemail" placeholder="Enter Email" type="email"> <small class="form-text text-muted" id="emailHelp">We'll never share your email with anyone else.</small>
-										</div>
-									</div>
-									<div class="form-group row">
-										<label class="col-sm-2 col-form-label text-right" for="bodyHtml">Message</label>
-										<div class="col-sm-10">
-											<textarea class="form-control" id="bodyHtml" rows="3"></textarea>
-										</div>
-									</div>
-									<div class="form-group row text-center">
-										<div class="col-12">
-											<button class="btn btn-primary" id="submitform" type="submit">Send</button>
-										</div>
-									</div>
-								</form>
-							</div>
+                            <div class="embed-responsive embed-responsive-21by9" style="height: 75%">
+                            <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfeHE1A2HFQomHXdez_VXssOyp7Ik8TbNJGua5fnogaXpq8og/viewform?usp=pp_url"></iframe>
+                            </div>
 						</div>
 					</div>
 				</div>
