Add interest to Home Page

--- a/index.html
+++ b/index.html
@@ -116,11 +116,9 @@ Main Content section
 <!-- Interest -->
 						<h1 id="interest">Interest</h1>
 						<ul>
-							<li>Quisque et</li>
-							<li>Pellentesque mattis</li>
-							<li>Donec tortor</li>
-							<li>Pellentesque bibendum</li>
-							<li>Nunc eu</li>
+							<li>Volunteering</li>
+							<li>Reading - Online article (Leadership, HR, IT)</li>
+							<li>Home Improvement (incl. Smart devices)</li>
 						</ul>
 					</div>
 				</div>
