Add Value Proposition to Home Page

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Main Content section
 					<div class="col-12 col-md-8 order-md-2">
 <!--- Value Proposition -->
 						<h1 id="value-proposition">Value Proposition</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p>Result oriented cross-sector skillset and hands-on experience including project management, strategic planning, system analysis and workflow improvement.</p>
 					</div>
 					<div class="col-12 col-sm-6 col-md-4 order-md-1">
 <!-- Motivator -->
