Add Wordcloud into Relevant Skills in Resume

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Main Content section
 					<div class="col-12 col-md-8 order-md-1">
 <!-- Intro / Bio -->
 						<h1 id="bio">Bio</h1>
-						<p>I am always challenging myself to find a better way to getting things done. I believe that there are great potential in every individual; I enjoy helping others to move forward, grow, and reach their fullest potential. I disagee with others description of me as a perfectionist, I just take pride in my work.</p>
+						<p>I am always challenging myself to find a better way to getting things done. I believe that there are great potential in every individual; I enjoy helping others to move forward, grow, and reach their fullest potential. I disagree with others description of me as a perfectionist, I just take pride in my work.</p>
 						<p>Although I'm IT by training and starting off my career in IT sector. Life has taken me in another direction. I join the nonprofit sector for more than a decade ago. As an independent, self-initiated person, I undertook complex assignments, met deadlines and delivered.</p>
 						<p>With my IT background and being open to ideas, I was able to find and understand the logical connections between them. I have an efficient perception of reality, and together with strong analytical skills, I am able to solve problems systematically, identify needs, and develop innovative strategies for long term sustainable programmes supported with the best evidence and practice.</p>
 						<div class="collapse multi-collapse show" id="readmorelink">
@@ -316,9 +316,5 @@ Footer section
 			</div>
 		</nav>
 	</footer>
-	<script src="https://smtpjs.com/v3/smtp.js">
-	</script> 
-	<script>
-	</script>
 </body>
 </html>
