--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,10 @@ Main Content section
 <!-- Relevant Skills -->
 					<div class="col-12 col-sm-12 col-md-8 order-md-1" id="relevant-summary">
 						<h1>Relavant Skills</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rutrum odio. Maecenas aliquam odio eget magna finibus, a luctus lacus hendrerit. Aenean ut mi id risus tristique imperdiet a sagittis nisl. Aliquam accumsan felis faucibus, interdum nisl ut, accumsan ante. Fusce auctor pellentesque lectus, sed tristique leo ullamcorper pretium. Nullam quis nisi massa. Nulla porta nulla nec finibus tincidunt. Aliquam vel laoreet sapien, et facilisis lacus. Nunc tincidunt nec dui sit amet varius. Curabitur vulputate ipsum at enim ultrices pharetra. Phasellus nec metus in dui tincidunt gravida ut tincidunt dolor. Aenean quis vulputate orci. Curabitur sit amet turpis tortor. Etiam augue nisi, egestas eget elementum vel, ultrices ac velit. Sed quam lectus, ultricies vel facilisis id, porta non risus.</p>
+                        <p>
+                           
+                           <img src="images/WordCloudRelevantSkills.png" alt="Analysis, Software Requirement, Adaptability, Communication Skills, Teamwork, Problem Solving, System Thinking, Patience, Attention to Detail, Teaching, Business-savvy, Design Thinking, Logical, Mind mapping" class="responsive">
+                        </p>
 					</div>
 					<div class="col-12 col-sm-12 col-md-8 order-md-2" id="past-working-experience">
 						<h1>Working Experience</h1>
@@ -273,9 +276,5 @@ Footer section
 			</div>
 		</nav>
 	</footer>
-	<script src="https://smtpjs.com/v3/smtp.js">
-	</script> 
-	<script>
-	</script>
 </body>
 </html>
