--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
-	<title>Donovan's Home Page</title><!-- CSS Reset -->
-
+	<title>Donovan's Home Page</title>
+    <!-- CSS Reset -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
+    <!-- Bootstrap -->
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
 	</script>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
 	</script>
+    <!-- Font Awesome -->
 	<script src="https://use.fontawesome.com/e62e6f1eeb.js">
-	</script>
+    </script>
+    <!-- My style sheet -->
  	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
@@ -32,7 +35,7 @@ Header section
 		<nav class="navbar navbar-expand-md navbar-dark xs-dark">
 			<div class="container">
 				<!-- logo -->
-				<a class="navbar-brand img-fluid" href="index.html"><img class="d-none d-xl-block" src="images/donovanlogo150x131.png"><img class="d-block d-xl-none" src="images/donovanlogo200x70.png"></a> <!-- Hamburger -->
+				<a class="navbar-brand img-fluid" href="index.html"><img class="d-none d-xl-block" src="images/donovanlogo150x131.png" alt="Donovan Lo's Website Logo"><img class="d-block d-xl-none" src="images/donovanlogo200x70.png" alt="Donovan Lo's Website Logo"></a> <!-- Hamburger -->
 				 <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button> <!-- Main Navigation -->
 				<div class="navbarlink collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
 					<ul class="nav navbar-nav navbar-right">
@@ -66,13 +69,13 @@ Main Content section
 						<p class="title1">Donovan Lo</p>
 						<p class="title2">Web Developer</p>
 					</div>
-					<div class="hero-image d-none d-lg-block"><img src="images/donovan343x500.png"></div>
+					<div class="hero-image d-none d-lg-block"><img src="images/donovan343x500.png" alt="Photo of Donovan Lo"></div>
 					<div class="hero-text-md d-block d-lg-none">
 						<p class="title2-md">Hello, I'm</p>
 						<p class="title1-md">Donovan</p>
 						<p class="title2-md">Web Developer</p>
 					</div>
-					<div class="hero-image-md d-block d-lg-none"><img src="images/donovan343x500.png"></div>
+					<div class="hero-image-md d-block d-lg-none"><img src="images/donovan343x500.png" alt="Photo of Donovan Lo"></div>
 				</div>
 			</div>
 		</div>
@@ -173,7 +176,7 @@ Main Content section
 						<p></p>
 						<h3>Mensa Singapore</h3>
 						<p></p>
-						<p><img id="membershipcard" src="images/membershipcard.png"></p>
+						<p><img id="membershipcard" src="images/membershipcard.png" alt="Mensa Membership Card"></p>
 					</div>
 <!-- Personality Test Result -->
 					<div class="col-12 col-md-4">
@@ -181,7 +184,7 @@ Main Content section
 						<p></p>
 						<h3>The Architect - INTJ</h3>
 						<p></p>
-						<p><img src="images/architect.png"></p>
+						<p><img src="images/architect.png" alt="Architect - one of the 16 personalities"></p>
 					</div>
 				</div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</div>
@@ -239,6 +242,7 @@ Footer section
 		<nav aria-label="Site Map navigation" id="pagefooterbottom">
 			<div class="container-fluid" id="footer-sitemap">
 				<section class="container">
+                    <span class="sr-only"><h2>Site Map</h2></span>
 					<ul class="row">
 						<li class="col-12 col-sm-6 col-md-4">
 							<a class="sitemap-header" href="index.html#top">Home</a>
