--- a/resume.html
+++ b/resume.html
@@ -6,18 +6,21 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
-	<title>Donovan's Home Page</title><!-- CSS Reset -->
-
+	<title>Donovan's Home Page</title>
+    <!-- CSS Reset -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
+    <!-- Bootstrap -->
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
 	</script>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
 	</script>
+    <!-- Font Awesome -->
 	<script src="https://use.fontawesome.com/e62e6f1eeb.js">
-	</script>
-	<link href="css/main.css" rel="stylesheet">
+    </script>
+    <!-- My style sheet -->
+ 	<link href="css/main.css" rel="stylesheet">
 </head>
 <body>
 <!--
