--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
 	<title>Donovan's Home Page</title>
     <!-- CSS Reset -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <!-- Bootstrap -->
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
-	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
-	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <!-- Font Awesome -->
-	<script src="https://use.fontawesome.com/e62e6f1eeb.js">
-    </script>
+	<script src="https://use.fontawesome.com/e62e6f1eeb.js"></script>
     <!-- My style sheet -->
  	<link href="css/main.css" rel="stylesheet">
 </head>
@@ -242,7 +238,7 @@ Footer section
 		<nav aria-label="Site Map navigation" id="pagefooterbottom">
 			<div class="container-fluid" id="footer-sitemap">
 				<section class="container">
-                    <span class="sr-only"><h2>Site Map</h2></span>
+                    <h4>Site Map</h4>
 					<ul class="row">
 						<li class="col-12 col-sm-6 col-md-4">
 							<a class="sitemap-header" href="index.html#top">Home</a>
