--- a/portfolio.html
+++ b/portfolio.html
@@ -6,19 +6,15 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
-	<title>Donovan's Home Page</title>
+	<title>Donovan's Portfolio Page</title>
     <!-- CSS Reset -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js">
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <!-- Bootstrap -->
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js">
-	</script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js">
-	</script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <!-- Font Awesome -->
-	<script src="https://use.fontawesome.com/e62e6f1eeb.js">
-    </script>
+	<script src="https://use.fontawesome.com/e62e6f1eeb.js"></script>
     <!-- My style sheet -->
  	<link href="css/main.css" rel="stylesheet">
 </head>
@@ -165,6 +161,7 @@ Footer section
 		<nav aria-label="Site Map navigation" id="pagefooterbottom">
 			<div class="container-fluid" id="footer-sitemap">
 				<section class="container">
+                    <h4>Site Map</h4>
 					<ul class="row">
 						<li class="col-12 col-sm-6 col-md-4">
 							<a class="sitemap-header" href="index.html#top">Home</a>
