--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@ Header section
 		<nav class="navbar navbar-expand-md navbar-dark xs-dark">
 			<div class="container">
 				<!-- logo -->
-				<a class="navbar-brand img-fluid" href="index.html"><img class="d-none d-xl-block" src="images/donovanlogo150x131.png" alt="Donovan Lo's Website Logo"><img class="d-block d-xl-none" src="images/donovanlogo200x70.png" alt="Donovan Lo's Website Logo"></a> <!-- Hamburger -->
-				 <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button> <!-- Main Navigation -->
+				<a class="navbar-brand img-fluid" href="index.html"><img class="d-none d-xl-block" src="images/donovanlogo150x131.png" alt="Donovan Lo's Website Logo"><img class="d-block d-xl-none" src="images/donovanlogo200x70.png" alt="Donovan Lo's Website Logo"></a> 
+                <!-- Hamburger -->
+				 <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button> 
+                 <!-- Main Navigation -->
 				<div class="navbarlink collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="nav-item active">
