--- a/resume.html
+++ b/resume.html
@@ -31,8 +31,10 @@ Header section
 		<nav class="navbar navbar-expand-md navbar-dark xs-dark">
 			<div class="container">
 				<!-- logo -->
-				<a class="navbar-brand img-fluid" href="index.html"><img class="d-none d-xl-block" src="images/donovanlogo150x131.png"><img class="d-block d-xl-none" src="images/donovanlogo200x70.png"></a> <!-- Hamburger -->
-				 <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button> <!-- Main Navigation -->
+				<a class="navbar-brand img-fluid" href="index.html"><img class="d-none d-xl-block" src="images/donovanlogo150x131.png" alt="Donovan Lo's Website Logo"><img class="d-block d-xl-none" src="images/donovanlogo200x70.png" alt="Donovan Lo's Website Logo"></a> 
+                <!-- Hamburger -->
+				 <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbarNav" data-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button> 
+                 <!-- Main Navigation -->
 				<div class="navbarlink collapse navbar-collapse" id="navbarNav" style="justify-content: flex-end">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="nav-item">
@@ -102,15 +104,15 @@ Main Content section
 					<div class="col-12 col-sm-6 col-md-4 order-md-2" id="skills">
 						<h1>Skills</h1>
 						<ul>
-							<li><img src="images/logos/html550x50.png">HTML5</li>
-							<li><img src="images/logos/css350x50.png">CSS3</li>
-							<li><img src="images/logos/javascript50x50.png">JavaScript</li>
-							<li><img src="images/logos/bootstrap450x50.jpg">Bootstrap</li>
-							<li><img src="images/logos/jquery50x50.jpg">jQuery</li>
-							<li><img src="images/logos/uiux50x50.png">UI/UX</li>
-							<li><img src="images/logos/ajax50x50.jpg">AJAX</li>
-							<li><img src="images/logos/restful50x50.png">RESTful API</li>
-							<li><img src="images/logos/json50x50.png">JSON</li>
+							<li><img src="images/logos/html550x50.png" alt="HTML5">HTML5</li>
+							<li><img src="images/logos/css350x50.png" alt="CSS3">CSS3</li>
+							<li><img src="images/logos/javascript50x50.png" alt="Javascript">JavaScript</li>
+							<li><img src="images/logos/bootstrap450x50.jpg" alt="Bootstrap">Bootstrap</li>
+							<li><img src="images/logos/jquery50x50.jpg" alt="jQuery">jQuery</li>
+							<li><img src="images/logos/uiux50x50.png" alt="UI/UX">UI/UX</li>
+							<li><img src="images/logos/ajax50x50.jpg" alt="AJAX">AJAX</li>
+							<li><img src="images/logos/restful50x50.png" alt="Restful API">RESTful API</li>
+							<li><img src="images/logos/json50x50.png" alt="JSON">JSON</li>
 						</ul>
 					</div>
 				</div>
