--- a/resume.html
+++ b/resume.html
@@ -73,8 +73,8 @@ Main Content section
 					<div class="col-12 col-sm-12 col-md-8 order-md-1" id="relevant-summary">
 						<h1>Relavant Skills</h1>
                         <p>
-                           
-                           <img src="images/WordCloudRelevantSkills.png" alt="Analysis, Software Requirement, Adaptability, Communication Skills, Teamwork, Problem Solving, System Thinking, Patience, Attention to Detail, Teaching, Business-savvy, Design Thinking, Logical, Mind mapping" class="responsive">
+
+                           <img src="images/WordCloudRelevantSkills.png" alt="Analysis, Software Requirement, Adaptability, Communication Skills, Teamwork, Problem Solving, System Thinking, Patience, Attention to Detail, Teaching, Business-savvy, Design Thinking, Logical, Mind mapping" class="img-fluid">
                         </p>
 					</div>
 					<div class="col-12 col-sm-12 col-md-8 order-md-2" id="past-working-experience">
