Chagne header 1 format

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
+
 	<title>Donovan's Home Page</title>
     <!-- CSS Reset -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
@@ -124,7 +125,7 @@ Main Content section
 					</div>
 				</div>
 				<div class="row">
-					<div>
+					<div class="col">
 <!-- Testimonials -->
 						<h1>Testimonials</h1>
 					</div>
