--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
-
+    <!--- No Caching-->
+    <meta http-equiv="Cache-Control" content="no-store" /> 
+    <meta http-equiv="Pragma" content="no-cache" /> 
+    <meta http-equiv="expires" content="0" /> 
 	<title>Donovan's Home Page</title>
     <!-- CSS Reset -->
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
