Update project 2 in protfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,17 +70,17 @@ Main Content section
 							<div class="card-body">
 								<h5 class="card-title">Donovan Lo's Profile</h5>
 								<h6 class="card-subtitle mb-2 text-muted">User Centric Front End Development with HTML & CSS</h6>
-								<p class="card-text">A personal resume website using HTML5 and CSS3.</p><a class="btn btn-primary" href="http://www.donovanlo.sg/">Go website</a>
+								<p class="card-text">A personal resume website using HTML5 and CSS3.</p><a class="btn btn-primary" href="http://resume.donovanlo.sg/">Go website</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-xl-4">
 						<div class="card" id="project2">
-							<img alt="Card image cap" class="card-img-top" src="images/sample2.png">
+							<img alt="Card image cap" class="card-img-top" src="images/project2.png">
 							<div class="card-body">
-								<h5 class="card-title">Holiday Planner</h5>
+								<h5 class="card-title">Forex Backtesting Project</h5>
 								<h6 class="card-subtitle mb-2 text-muted">Interactive Front End Development with Javascript</h6>
-								<p class="card-text">Helps to locate nearby accomodation, food and tourist attractions in a selected location.</p><a class="btn btn-primary" href="https://benhasselgren.github.io/ifd-milestone-project-pages/#">Go website</a>
+								<p class="card-text">Allow back testing for moving average strategy to be tested using s chart display of historical currency exchange data retrieved from Monetary Authority of Singapore through their API and functions that allow transactions to be recorded and final project/loss summarised. </p><a class="btn btn-primary" href="https://benhasselgren.github.io/ifd-milestone-project-pages/#">Go website</a>
 							</div>
 						</div>
 					</div>
@@ -107,7 +107,7 @@ Main Content section
 				</div>
 			</div>
             <div>
-                Note： Please note that with the exception of first project, the remaining three are projects from Code Institute's Student Project Page (https://codeinstitute.net/student-projects/)
+                Note： Please note that with the exception of first and second project, the remaining two are projects from Code Institute's Student Project Page (https://codeinstitute.net/student-projects/)
             </div>
 		</div>
 	</main>
