Update and style Project 2 in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,10 @@ Main Content section
 							<img alt="Card image cap" class="card-img-top" src="images/project1.png">
 							<div class="card-body">
 								<h5 class="card-title">Donovan Lo's Profile</h5>
-								<h6 class="card-subtitle mb-2 text-muted">User Centric Front End Development with HTML & CSS</h6>
-								<p class="card-text">A personal resume website using HTML5 and CSS3.</p><a class="btn btn-primary" href="http://resume.donovanlo.sg/">Go website</a>
+								<h6 class="card-subtitle mb-4 text-muted">User Centric Front End Development with HTML & CSS</h6>
+								<p class="card-text">A personal resume website using HTML5 and CSS3.</p>
+                                <p class="card-text">Skills applied: HTML5, CSS3, Bootstrap</p>
+                                <a class="btn btn-primary" href="http://resume.donovanlo.sg/">Go website</a>
 							</div>
 						</div>
 					</div>
@@ -80,7 +82,9 @@ Main Content section
 							<div class="card-body">
 								<h5 class="card-title">Forex Backtesting Project</h5>
 								<h6 class="card-subtitle mb-2 text-muted">Interactive Front End Development with Javascript</h6>
-								<p class="card-text">Allow back testing for moving average strategy to be tested using s chart display of historical currency exchange data retrieved from Monetary Authority of Singapore through their API and functions that allow transactions to be recorded and final project/loss summarised. </p><a class="btn btn-primary" href="https://benhasselgren.github.io/ifd-milestone-project-pages/#">Go website</a>
+								<p class="card-text">Allow back testing for moving average strategy to be tested using s chart display of historical currency exchange data retrieved from Monetary Authority of Singapore through their API and functions that allow transactions to be recorded and final project/loss summarised. </p>
+                                <p class="card-text">Skills applied: HTML5, CSS3, Bootstrap, JavaScript, jQuery, Axios, JSON </p>
+                                <a class="btn btn-primary" href="http://forexbacktesting.donovanlo.sg">Go website</a>
 							</div>
 						</div>
 					</div>
