--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@ Main Content section
 						<h1>Relavant Skills</h1>
                         <p>
 
-                           <img src="images/WordCloudRelevantSkills.png" alt="Analysis, Software Requirement, Adaptability, Communication Skills, Teamwork, Problem Solving, System Thinking, Patience, Attention to Detail, Teaching, Business-savvy, Design Thinking, Logical, Mind mapping" class="img-fluid">
+                           <img src="images/WordCloudRelevantSkills.jpg" alt="HTMLS, Mind Mapping, Business Sense, GTD, Logical Thinking, Problem Solving, Critical Thinking, Strategic Planning, Data Structures, Microsoft Office, ColdFusion, JavaScript, SharePoint, JQuery, BootStrap, Python, SQL, Ajax, Analytical Skills, Multitasking, Project Management, Adult Training and Assessment, GitHub, Flask, RestfulAPl, JSON, Collaboration, Detail-oriented" class="img-fluid">
                         </p>
 					</div>
 					<div class="col-12 col-sm-12 col-md-8 order-md-2" id="past-working-experience">
