--- a/resume.html
+++ b/resume.html
@@ -94,6 +94,8 @@ Main Content section
 <!-- Education -->
 						<h1>Education</h1>
 						<ul>
+							<li>Diploma in Software Development (Aug 2020)<br>
+							<em>Code Institute  </em></li>
 							<li>Bachelor's Degree BSc(Hons) in Computing, Upper Second Honors<br>
 							<em>Coventry University</em></li>
 							<li>Advanced Diploma in Computer Studies<br>
