Added a project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,6 +89,18 @@ Main Content section
 						</div>
 					</div>
 					<div class="col-12 col-sm-6 col-xl-4">
+						<div class="card" id="sevenauracom">
+							<img alt="Card image cap" class="card-img-top" src="images/sevenauracom.png">
+							<div class="card-body">
+								<h5 class="card-title">Seven Aura</h5>
+								<h6 class="card-subtitle mb-2 text-muted">Rejuvenate and add mobile responsiveness</h6>
+								<p class="card-text">A rejuveenated mobile responsive company website of a Yoga learning centre.</p>
+                                <p class="card-text">Skills applied: HTML5, CSS3, Bootstrap, JavaScript</p>
+                                <a class="btn btn-primary" href="http://donovanlosg.github.io/SevenAuraCom">Go website</a>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-sm-6 col-xl-4">
 						<div class="card" id="project3">
 							<img alt="Card image cap" class="card-img-top" src="images/sample3.png">
 							<div class="card-body">
@@ -111,7 +123,7 @@ Main Content section
 				</div>
 			</div>
             <div>
-                Note： Please note that with the exception of first and second project, the remaining two are projects from Code Institute's Student Project Page (https://codeinstitute.net/student-projects/)
+                Note： Please note that with the exception of first three projects, the remaining two are projects from Code Institute's Student Project Page (https://codeinstitute.net/student-projects/)
             </div>
 		</div>
 	</main>
