Update production site url for 7aura.com

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,11 +92,11 @@ Main Content section
 						<div class="card" id="sevenauracom">
 							<img alt="Card image cap" class="card-img-top" src="images/sevenauracom.png">
 							<div class="card-body">
-								<h5 class="card-title">Seven Aura</h5>
+								<h5 class="card-title">7Aura.com</h5>
 								<h6 class="card-subtitle mb-2 text-muted">Rejuvenate and add mobile responsiveness</h6>
 								<p class="card-text">A rejuveenated mobile responsive company website of a Yoga learning centre.</p>
                                 <p class="card-text">Skills applied: HTML5, CSS3, Bootstrap, JavaScript</p>
-                                <a class="btn btn-primary" href="http://donovanlosg.github.io/SevenAuraCom">Go website</a>
+                                <a class="btn btn-primary" href="http://7aura.com">Go website</a>
 							</div>
 						</div>
 					</div>
