Add a project to portfolio, delete dummy portfolio

--- a/index.html
+++ b/index.html
@@ -327,9 +327,13 @@ Footer section
 								<h1>
 									Contact Form
 								</h1>
-								<div class="embed-responsive embed-responsive-21by9" style="height: 75%">
+                                <div style="background-color: white">
+                                    Temporary Unavailable
+                                </div>
+								<!-- <div class="embed-responsive embed-responsive-21by9" style="height: 75%;">
+                                    Temporary Unavailable
 									<iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfeHE1A2HFQomHXdez_VXssOyp7Ik8TbNJGua5fnogaXpq8og/viewform?usp=pp_url"></iframe>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
@@ -395,23 +399,25 @@ Footer section
 									</li>
 								</ul>
 							</li>
-							<li class=" col-12 col-sm-6 col-md-4">
-								<a class="sitemap-header" href="portfolio.html#top">Portfolio</a>
-								<ul class=" footer-sitemap-li">
-									<li>
-										<a href="portfolio.html#project1">Project: Donovan’s Profile</a>
-									</li>
-									<li>
-										<a href="portfolio.html#project2">Project: Holdiay Planner</a>
-									</li>
-									<li>
-										<a href="portfolio.html#project3">Project: Memorize Me</a>
-									</li>
-									<li>
-										<a href="portfolio.html#project4">Project: Unitracker</a>
-									</li>
-								</ul><a class="sitemap-header download-resume" href="documents/DonovanResume.pdf" target="_blank">Download Resume</a>
-							</li>
+                            <li class=" col-12 col-sm-6 col-md-4">
+                                <a class="sitemap-header" href="portfolio.html#top">Portfolio</a>
+                                <ul class=" footer-sitemap-li">
+                                    <li>
+                                        <a href="portfolio.html#project1">Project: Donovan’s Profile</a>
+                                    </li>
+                                    <li>
+                                        <a href="portfolio.html#project2">Project: Forex Backtesting Project</a>
+                                    </li>
+                                    <li>
+                                        <a href="portfolio.html#sevenauracom">7aura.com</a>
+                                    </li>
+                                    <li>
+                                        <a href="portfolio.html#project3">Project: Cleaning d'Solutions</a>
+                                    </li>
+                                </ul><br>
+                                <br>
+                                <a class="sitemap-header download-resume" href="documents/DonovanResume.pdf" target="_blank">Download Resume</a>
+                            </li>
 						</ul>
 					</section>
 				</div>
