--- a/resume.html
+++ b/resume.html
@@ -190,9 +190,13 @@ Footer section
 						</div>
 						<div class="col-12 col-lg-6">
 							<h1>Contact Form</h1>
-                            <div class="embed-responsive embed-responsive-21by9" style="height: 75%">
-                            <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfeHE1A2HFQomHXdez_VXssOyp7Ik8TbNJGua5fnogaXpq8og/viewform?usp=pp_url"></iframe>
-                            </div>
+                                <div style="background-color: white">
+                                    Temporary Unavailable
+                                </div>
+								<!-- <div class="embed-responsive embed-responsive-21by9" style="height: 75%;">
+                                    Temporary Unavailable
+									<iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfeHE1A2HFQomHXdez_VXssOyp7Ik8TbNJGua5fnogaXpq8og/viewform?usp=pp_url"></iframe>
+								</div> -->
 						</div>
 					</div>
 				</div>
@@ -263,13 +267,13 @@ Footer section
 									<a href="portfolio.html#project1">Project: Donovan’s Profile</a>
 								</li>
 								<li>
-									<a href="portfolio.html#project2">Project: Holdiay Planner</a>
+									<a href="portfolio.html#project2">Project: Forex Backtesting Project</a>
 								</li>
 								<li>
-									<a href="portfolio.html#project3">Project: Memorize Me</a>
+									<a href="portfolio.html#sevenauracom">7aura.com</a>
 								</li>
 								<li>
-									<a href="portfolio.html#project4">Project: Unitracker</a>
+									<a href="portfolio.html#project3">Project: Cleaning d'Solutions</a>
 								</li>
 							</ul><br>
 							<br>
