--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@ Main Content section
 			<h1>Portfolio</h1>
 			<div class="container">
 				<div class="row">
-					<div class="col-12 col-sm-6 col-xl-4">
+					<div class="col-12 col-sm-6 col-xl-4 clearfix">
 						<div class="card" id="project1">
 							<img alt="Card image cap" class="card-img-top" src="images/project1.png">
 							<div class="card-body">
@@ -76,7 +76,7 @@ Main Content section
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-xl-4">
+					<div class="col-12 col-sm-6 col-xl-4 clearfix">
 						<div class="card" id="project2">
 							<img alt="Card image cap" class="card-img-top" src="images/project2.png">
 							<div class="card-body">
@@ -88,7 +88,7 @@ Main Content section
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-xl-4">
+					<div class="col-12 col-sm-6 col-xl-4 clearfix">
 						<div class="card" id="sevenauracom">
 							<img alt="Card image cap" class="card-img-top" src="images/sevenauracom.png">
 							<div class="card-body">
@@ -100,31 +100,22 @@ Main Content section
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-xl-4">
+					<div class="col-12 col-sm-6 col-xl-4 clearfix">
 						<div class="card" id="project3">
-							<img alt="Card image cap" class="card-img-top" src="images/sample3.png">
+							<img alt="Card image cap" class="card-img-top" src="images/project3.png">
 							<div class="card-body">
-								<h5 class="card-title">Memorize Me</h5>
+								<h5 class="card-title">Cleaning d'Solutions</h5>
 								<h6 class="card-subtitle mb-2 text-muted">Data Centric Development with Python</h6>
-								<p class="card-text">Welcome to the Memory Game. This is a free to play game with a 4x4 and 6x6 board. This Game is build as a project for my Full Stack Web Development training.</p><a class="btn btn-primary" href="https://memorize-me-game.herokuapp.com/">Go website</a>
+								<p class="card-text">Solutions to griminess and messiness. Crowd sourced information, guides, recipes, tips and hacks on cleaning.</p>
+                                <p class="card-text">Skills applied: HTML5, CSS3, Bootstrap, JavaScript, Python, JQuery, Flask, Jinja, MongoDB, GitHub, Heroku</p>
+                                <a class="btn btn-primary" href="http://cleaning.dsolutions.sg/">Go website</a>
+                                
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-sm-6 col-xl-4">
-						<div class="card" id="project4">
-							<img alt="Card image cap" class="card-img-top" src="images/sample4.png">
-							<div class="card-body">
-								<h5 class="card-title">Unitracker</h5>
-								<h6 class="card-subtitle mb-2 text-muted">Full Stack Frameworks with Django</h6>
-								<p class="card-text">Unitracker is a web app to allow users to report bugs, request features and view the details of each ticket.</p><a class="btn btn-primary" href="https://unitracker.herokuapp.com/">Go website</a>
-							</div>
-						</div>
-					</div>
+					
 				</div>
 			</div>
-            <div>
-                Note： Please note that with the exception of first three projects, the remaining two are projects from Code Institute's Student Project Page (https://codeinstitute.net/student-projects/)
-            </div>
 		</div>
 	</main>
 <!--
@@ -167,9 +158,13 @@ Footer section
 						</div>
 						<div class="col-12 col-lg-6">
 							<h1>Contact Form</h1>
-                            <div class="embed-responsive embed-responsive-21by9" style="height: 75%">
-                            <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfeHE1A2HFQomHXdez_VXssOyp7Ik8TbNJGua5fnogaXpq8og/viewform?usp=pp_url"></iframe>
-                            </div>
+                                <div style="background-color: white">
+                                    Temporary Unavailable
+                                </div>
+								<!-- <div class="embed-responsive embed-responsive-21by9" style="height: 75%;">
+                                    Temporary Unavailable
+									<iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfeHE1A2HFQomHXdez_VXssOyp7Ik8TbNJGua5fnogaXpq8og/viewform?usp=pp_url"></iframe>
+								</div> -->
 						</div>
 					</div>
 				</div>
@@ -240,13 +235,13 @@ Footer section
 									<a href="portfolio.html#project1">Project: Donovan’s Profile</a>
 								</li>
 								<li>
-									<a href="portfolio.html#project2">Project: Holdiay Planner</a>
+									<a href="portfolio.html#project2">Project: Forex Backtesting Project</a>
 								</li>
 								<li>
-									<a href="portfolio.html#project3">Project: Memorize Me</a>
+									<a href="portfolio.html#sevenauracom">7aura.com</a>
 								</li>
 								<li>
-									<a href="portfolio.html#project4">Project: Unitracker</a>
+									<a href="portfolio.html#project3">Project: Cleaning d'Solutions</a>
 								</li>
 							</ul><br>
 							<br>
