Update project description

--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@ Main Content section
 							<div class="card-body">
 								<h5 class="card-title">Cleaning d'Solutions</h5>
 								<h6 class="card-subtitle mb-2 text-muted">Data Centric Development with Python</h6>
-								<p class="card-text">Solutions to griminess and messiness. Crowd sourced information, guides, recipes, tips and hacks on cleaning.</p>
+								<p class="card-text">A database project using HTML, CSS, Bootstrap, Jinja for front end, Python, Flask for back end. MongoDB is used to store the database. Developed in GitHub and hosted on Heroku. Implemnting features like authentication, authorisation, advance search, randomization, Online HTML Editor, responsive designing.</p>
                                 <p class="card-text">Skills applied: HTML5, CSS3, Bootstrap, JavaScript, Python, JQuery, Flask, Jinja, MongoDB, GitHub, Heroku</p>
                                 <a class="btn btn-primary" href="http://cleaning.dsolutions.sg/">Go website</a>
                                 
